Bug 98946 - FILESAVE: Impress crashes or hangs due to showing error dialog "To many windows open"
Summary: FILESAVE: Impress crashes or hangs due to showing error dialog "To many windo...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.1.1.3 release
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.3
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-29 04:57 UTC by Uesak Katepong
Modified: 2016-09-28 11:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
you can reproduce by using this file (1.10 MB, application/vnd.oasis.opendocument.presentation)
2016-03-29 04:57 UTC, Uesak Katepong
Details
Attached file is snapshot of Error (96.15 KB, application/pdf)
2016-03-31 05:29 UTC, Uesak Katepong
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Uesak Katepong 2016-03-29 04:57:15 UTC
Created attachment 123909 [details]
you can reproduce by using this file

(Sorry for my English, I'm Thai)

Opened file ".odp" found that an error dialog, I selected recovery button.
After recovery processes completed, document work as normal. 
When I exit the program by selected menu "save as" type ".odb" format.
the Error dialog appeared as "To may windows open" and hangs even I clicked "OK" button. I tried several clicks but can't count how much i did because
sometime it wasn't response.
Comment 1 raal 2016-03-29 10:03:44 UTC
I can not confirm with Version: 5.2.0.0.alpha0+
Build ID: c0737674ad7ca6af2ada0b8b42f55e9ed46d87db
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
No error message after "Save As .."
Comment 2 Uesak Katepong 2016-03-31 05:29:29 UTC
Created attachment 123969 [details]
Attached file is snapshot of Error

I took snapshot as per attachment.
Note:
At the time of error.
I opened "Task manager" to end task (stop program).
I found that several LibreOffice apps had been running.


My computer & software version info as below;
Dell precision M3800, Windows 10 pro.

For LibreOffice 
Version: 5.1.2.1 (x64)
Build ID: 2603b69c5ec5981bb5f053f8ebfd1f3de00a4c29
CPU Threads: 8; OS Version: Windows 6.19; UI Render: default; 
Locale: th-TH (en_US)

thank you for your support
Comment 3 Buovjaga 2016-04-12 11:05:00 UTC
Reproduced.

1. Save the ODP to PPTX and reload
2. Save the PPTX to ODP
Get many error dialogs (MathType error).

Win 7 Pro 64-bit, Version: 5.1.2.2 (x64)
Build ID: d3bf12ecb743fc0d20e0be0c58ca359301eb705f
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
Locale: fi-FI (fi_FI)

Version: 5.2.0.0.alpha0+
Build ID: b0e678c86136ef6d65cea66168a99217664c0278
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-04-11_23:06:28
Locale: fi-FI (fi_FI)
Comment 4 Caolán McNamara 2016-09-23 16:12:52 UTC
I can reproduce this. The dialog comes from MatyType itself. We've set all the embedded mathtype objects to "running" state while trying to get their preferred size and mathtype doesn't like having to many running at the same time.

https://gerrit.libreoffice.org/#/c/29234/ make the problem go away
Comment 5 Commit Notification 2016-09-27 09:18:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e6fc195ae8a59d665395149ea5f06749c4c6a596

Resolves: tdf#98946 too many running MathTypes...

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2016-09-28 11:30:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0ed3075009cf48844759b2cfa5938d66675b46c6&h=libreoffice-5-2

Resolves: tdf#98946 too many running MathTypes...

It will be available in 5.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.