Resolves: tdf#98946 too many running MathTypes...

causes mathtype to display a warning dialog, so
try restoring them back to loaded after loading
them in order to get their preferred size

Change-Id: Idff714efa228a739f380dbae429d852a8f8c5298